# ml-from-scratch

./: .coveragerc  .pre-commit-config.yaml  LICENSE  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/ISSUE_TEMPLATE/: bug.yml  feature.yml  task.yml
.github/workflows/: anki_deck.yml  ci.yml  pr-agent.yml
cards/: export_decks.py
cards/apkg/: machine_learning.apkg
cards/gradient_descent/: advanced.md  basic.md
cards/linear_regression/: advanced.md  basic.md
data/csv/: nba.csv
notebooks/: 1_linear_regression_closed_form.ipynb  1_linear_regression_sklearn.ipynb  2_gradient_descent.ipynb
scripts/: check_slow_cover_changes.py
src/: __init__.py  gradient_descent.py  linear_regression.py
src/utils/: optimizable.py  polynomial.py  types.py  visualizer.py
tests/: conftest.py  types.py
tests/integration/: test_gradient_descent_with_polynome.py
tests/unit/: test_gradient_descent.py  test_linear_regression.py  test_polynomial.py
