[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mlfromscratch"
version = "0.1.0"
description = "Educational ML library built in NumPy"
requires-python = ">=3.10"
dependencies = [
    "numpy==2.2.3",
    "pandas==2.2.3",
    "scikit-learn==1.6.1",
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.2",
    "pytest-cov==7.0.0",
    "ruff==0.13.2",
    "mypy==1.18.2",
    "pre-commit==4.3.0",
]
anki = ["genanki==0.13.1"]
animations = ["manim==0.19.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
include = ["src/**/*.py", "tests/**/*.py"]

[tool.ruff.format]
indent-style = "space"
docstring-code-format = true
skip-magic-trailing-comma = false
